--- a/hurtumartworkz/package.json
+++ b/hurtumartworkz/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,7 +11,6 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
@@ -40,7 +40,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
+  },
+  "overrides": {
+    "react-scripts": "^5.0.1",
+    "body-parser": "1.20.3",
+    "nth-check": ">=2.0.2",
+    "serve-static": "2.1.0",
+    "postcss": ">=8.4.31"
   }
 }
